# CosmicCritiqueBot

./: LICENSE  README.md  astro.config.mjs  package-lock.json  package.json  pyproject.toml
content/: pelicanconf.py
content/content/: first-post.md
content/output/: archives.html  authors.html  categories.html  index.html  tags.html  test.html
content/output/author/: cosmicbot.html
content/output/category/: misc.html
content/output/feeds/: all.atom.xml  misc.atom.xml
src/cosmiccritiquebot/: __init__.py
